# howstheweather

./: Cargo.toml  README.md
src/: main.rs  weather.rs
src/commands/: forecast.rs  mod.rs  openmeteojson.rs  weather.rs
src/data/: cities.csv
