[package]
name = "howstheweather"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
serenity = { version = "0.12.0", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
shuttle-runtime = "0.47.0"
shuttle-serenity = "0.47.0"
tokio = "1.26.0"
tracing = "0.1.37"
reqwest = { version = "0.12", features = [
    "json",
] } # reqwest with JSON parsing support
futures = "0.3" # for our async / await blocks
serde = { version = "1", features = ["derive"] }
serde_json = "1"
my_internet_ip = "0.1.1"
geolocation = "0.2.1"
csv = "1.1"
